Loading, getting to know the data, and preparing it for analysis

--- a/Wholesale_And_Retail_Orders.ipynb
+++ b/Wholesale_And_Retail_Orders.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "id": "27dc51d3-9818-44c3-b99d-17b944422101",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "id": "bdf6f2fb-5b80-47fa-ab57-608f88aa30e2",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "id": "0720e651-a2ee-456f-a7d2-0c166b98a2a2",
    "metadata": {
     "scrolled": true
@@ -181,7 +181,7 @@
        "4                18.30  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "id": "297480bc-bdc9-49a4-bdf9-6398949c3bbf",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "id": "6e33c53b-ddca-4552-bd34-5b8bd0cd38c8",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "2b1a93fb-705b-49f6-a782-f19bd2527120",
    "metadata": {},
    "outputs": [
@@ -271,7 +271,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,9 +291,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "id": "9cf80cbd-360a-443d-9fb4-00304c8cf33c",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -310,7 +312,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,6 +326,146 @@
     "\n",
     "# orders_df.head()\n",
     "orders_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "25337cbb-3286-40e8-8464-abffe8a45b50",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>customer_status</th>\n",
+       "      <th>date_order_was_placed</th>\n",
+       "      <th>delivery_date</th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>quantity_ordered</th>\n",
+       "      <th>total_retail_price_for_this_order</th>\n",
+       "      <th>cost_price_per_unit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>579</td>\n",
+       "      <td>silver</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "      <td>2017-01-07</td>\n",
+       "      <td>123002578</td>\n",
+       "      <td>220101400106</td>\n",
+       "      <td>2</td>\n",
+       "      <td>92.6</td>\n",
+       "      <td>20.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7574</td>\n",
+       "      <td>silver</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "      <td>2017-01-05</td>\n",
+       "      <td>123004074</td>\n",
+       "      <td>210201000009</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21.7</td>\n",
+       "      <td>9.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>28861</td>\n",
+       "      <td>gold</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "      <td>2017-01-04</td>\n",
+       "      <td>123000871</td>\n",
+       "      <td>230100500068</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>0.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>43796</td>\n",
+       "      <td>gold</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "      <td>2017-01-06</td>\n",
+       "      <td>123002851</td>\n",
+       "      <td>220100100633</td>\n",
+       "      <td>1</td>\n",
+       "      <td>47.9</td>\n",
+       "      <td>24.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>54673</td>\n",
+       "      <td>gold</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "      <td>2017-01-04</td>\n",
+       "      <td>123003607</td>\n",
+       "      <td>220200200043</td>\n",
+       "      <td>1</td>\n",
+       "      <td>36.9</td>\n",
+       "      <td>18.30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   customer_id customer_status date_order_was_placed delivery_date   order_id  \\\n",
+       "0          579          silver            2017-01-01    2017-01-07  123002578   \n",
+       "1         7574          silver            2017-01-01    2017-01-05  123004074   \n",
+       "2        28861            gold            2017-01-01    2017-01-04  123000871   \n",
+       "3        43796            gold            2017-01-01    2017-01-06  123002851   \n",
+       "4        54673            gold            2017-01-01    2017-01-04  123003607   \n",
+       "\n",
+       "     product_id  quantity_ordered  total_retail_price_for_this_order  \\\n",
+       "0  220101400106                 2                               92.6   \n",
+       "1  210201000009                 1                               21.7   \n",
+       "2  230100500068                 1                                1.7   \n",
+       "3  220100100633                 1                               47.9   \n",
+       "4  220200200043                 1                               36.9   \n",
+       "\n",
+       "   cost_price_per_unit  \n",
+       "0                20.70  \n",
+       "1                 9.95  \n",
+       "2                 0.80  \n",
+       "3                24.05  \n",
+       "4                18.30  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Також вважаю за потрібне уніфікувати значення в колонці customer_status \n",
+    "# та конвертувати все до нижнього регістру, щоб повсюди мати однаковий формат \n",
+    "# і було зручно працювати з ними.\n",
+    "\n",
+    "orders_df.customer_status = orders_df.customer_status.apply(lambda value: value.lower())\n",
+    "orders_df.head()"
    ]
   },
   {
